--- a/AHMH/Base.lproj/Main.storyboard
+++ b/AHMH/Base.lproj/Main.storyboard
@@ -106,13 +106,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="환영합니다." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pbC-bi-ykF">
-                                <rect key="frame" x="10" y="145" width="394" height="20.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
+                                <rect key="frame" x="20" y="64" width="374" height="24"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
+                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7C2-iL-sYR">
-                                <rect key="frame" x="159.5" y="195.5" width="95" height="30"/>
+                                <rect key="frame" x="159.5" y="118" width="95" height="30"/>
                                 <state key="normal" title="닉네임 업데이트"/>
                                 <connections>
                                     <action selector="profileUpdateButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="BL3-al-qpC"/>
@@ -122,11 +122,11 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="pbC-bi-ykF" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="BTQ-mS-tJx"/>
+                            <constraint firstItem="pbC-bi-ykF" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="BTQ-mS-tJx"/>
                             <constraint firstItem="7C2-iL-sYR" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Bdm-Cu-5Po"/>
                             <constraint firstItem="7C2-iL-sYR" firstAttribute="top" secondItem="pbC-bi-ykF" secondAttribute="bottom" constant="30" id="I6e-Rf-qzl"/>
                             <constraint firstItem="pbC-bi-ykF" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="TYr-ag-P0q"/>
-                            <constraint firstItem="pbC-bi-ykF" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="101" id="gEr-Tn-qG5"/>
+                            <constraint firstItem="pbC-bi-ykF" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="gEr-Tn-qG5"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="" image="house.fill" catalog="system" id="Jy6-qJ-WGp"/>
@@ -245,7 +245,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="twB-xL-Mtz" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="415.94202898550731" y="839.73214285714278"/>
+            <point key="canvasLocation" x="-494" y="1674"/>
         </scene>
         <!--Facility Detail View Controller-->
         <scene sceneID="gWk-JL-K7i">
@@ -324,7 +324,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XMv-e5-ZxJ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-494" y="1580"/>
+            <point key="canvasLocation" x="410" y="1673"/>
         </scene>
         <!--Baby Sitter View Controller-->
         <scene sceneID="WeA-Xc-jLS">
@@ -358,19 +358,19 @@
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="장선영" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="z84-Is-duW">
                                                             <rect key="frame" x="0.0" y="0.0" width="126.5" height="20.5"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                            <nil key="textColor"/>
+                                                            <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="25세" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GUH-Oc-0qF">
                                                             <rect key="frame" x="0.0" y="25.5" width="126.5" height="20.5"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                            <nil key="textColor"/>
+                                                            <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="경남 양산시 새실로" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1JN-kH-zfL">
                                                             <rect key="frame" x="0.0" y="51" width="126.5" height="20.5"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                            <nil key="textColor"/>
+                                                            <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                     </subviews>
@@ -378,7 +378,7 @@
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="열심히 하겠습니다." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2np-GA-YG2">
                                                     <rect key="frame" x="40" y="150.5" width="127" height="20.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
+                                                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
@@ -423,7 +423,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aZi-te-5Og" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1657.9710144927537" y="839.73214285714278"/>
+            <point key="canvasLocation" x="1393" y="889"/>
         </scene>
         <!--Baby Sitter Detail View Controller-->
         <scene sceneID="vbc-hF-lkT">
@@ -538,21 +538,21 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="EEk-pZ-Qpw" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="748" y="1580"/>
+            <point key="canvasLocation" x="1393" y="1673"/>
         </scene>
-        <!--View Controller-->
+        <!--Messages-->
         <scene sceneID="vPz-Fy-yom">
             <objects>
-                <viewController id="6Ov-nb-7RY" sceneMemberID="viewController">
+                <viewController id="6Ov-nb-7RY" customClass="ChatListViewController" customModule="AHMH" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Q3k-5n-v2q">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="v7K-xx-zrK">
-                                <rect key="frame" x="0.0" y="44" width="414" height="769"/>
+                                <rect key="frame" x="0.0" y="88" width="414" height="725"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="jMq-Ly-Z87">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ChatListCell" id="jMq-Ly-Z87">
                                         <rect key="frame" x="0.0" y="24.5" width="414" height="43.5"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="jMq-Ly-Z87" id="P2X-Hz-PTy">
@@ -572,11 +572,14 @@
                             <constraint firstItem="v7K-xx-zrK" firstAttribute="leading" secondItem="vjz-vp-kFf" secondAttribute="leading" id="tPy-dC-fWz"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="" image="message" catalog="system" id="NOr-cj-232"/>
+                    <navigationItem key="navigationItem" title="Messages" id="pQm-Ga-klU"/>
+                    <connections>
+                        <outlet property="tableView" destination="v7K-xx-zrK" id="TnK-uZ-ufl"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SlD-YT-UvE" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2644.9275362318845" y="839.73214285714278"/>
+            <point key="canvasLocation" x="3521.739130434783" y="888.61607142857144"/>
         </scene>
         <!--User View Controller-->
         <scene sceneID="3zV-z8-hDJ">
@@ -610,7 +613,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0hu-ug-wcD" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3676.811594202899" y="839.73214285714278"/>
+            <point key="canvasLocation" x="4697.1014492753629" y="888.61607142857144"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="5Q6-02-YB1">
@@ -628,7 +631,7 @@
                         <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="9r3-rV-F68"/>
                         <segue destination="cns-ar-7Fq" kind="relationship" relationship="viewControllers" id="etS-63-MRG"/>
                         <segue destination="LGa-RF-c55" kind="relationship" relationship="viewControllers" id="jka-Iw-bLQ"/>
-                        <segue destination="6Ov-nb-7RY" kind="relationship" relationship="viewControllers" id="UT3-Uu-fcr"/>
+                        <segue destination="991-sG-Drf" kind="relationship" relationship="viewControllers" id="UT3-Uu-fcr"/>
                         <segue destination="nqJ-kd-9iy" kind="relationship" relationship="viewControllers" id="smz-2W-Wro"/>
                     </connections>
                 </tabBarController>
@@ -672,6 +675,25 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="h35-sY-oCX" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-3888.4057971014495" y="90.401785714285708"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="vjV-u2-7gT">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="991-sG-Drf" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="" image="message" catalog="system" id="NOr-cj-232"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="nza-dB-TnV">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="6Ov-nb-7RY" kind="relationship" relationship="rootViewController" id="dPf-aF-Rs2"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="6eY-eu-Gzl" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2611.594202898551" y="888.61607142857144"/>
         </scene>
     </scenes>
     <resources>
