--- a/AHMH/Base.lproj/Main.storyboard
+++ b/AHMH/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="iY5-fd-N1R">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="oRw-JO-3SD">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
@@ -116,8 +116,8 @@
                                                 <rect key="frame" x="0.0" y="0.0" width="414" height="238.5"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00님 환영합니다!" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pbC-bi-ykF">
-                                                        <rect key="frame" x="16" y="16" width="382" height="48"/>
-                                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
+                                                        <rect key="frame" x="166" y="16" width="232" height="48"/>
+                                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
                                                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
@@ -153,16 +153,27 @@
                                                             </collectionViewCell>
                                                         </cells>
                                                     </collectionView>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2021년 10월 20일 " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oe1-0x-tnG">
+                                                        <rect key="frame" x="16" y="16" width="140" height="20.5"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="width" constant="140" id="1ql-4Y-sp2"/>
+                                                        </constraints>
+                                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
+                                                        <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
                                                 </subviews>
                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <constraints>
                                                     <constraint firstItem="pbC-bi-ykF" firstAttribute="top" secondItem="fUb-KV-fYJ" secondAttribute="top" constant="16" id="27T-YZ-C8m"/>
-                                                    <constraint firstItem="pbC-bi-ykF" firstAttribute="leading" secondItem="fUb-KV-fYJ" secondAttribute="leading" constant="16" id="6or-Hr-yLp"/>
+                                                    <constraint firstItem="pbC-bi-ykF" firstAttribute="leading" secondItem="oe1-0x-tnG" secondAttribute="trailing" constant="10" id="8bt-uN-i6e"/>
                                                     <constraint firstItem="AvP-78-1WK" firstAttribute="leading" secondItem="fUb-KV-fYJ" secondAttribute="leading" constant="16" id="KoU-DY-yfl"/>
                                                     <constraint firstAttribute="trailing" secondItem="pbC-bi-ykF" secondAttribute="trailing" constant="16" id="MmA-ec-B4I"/>
                                                     <constraint firstItem="0Qe-Sh-AcK" firstAttribute="leading" secondItem="fUb-KV-fYJ" secondAttribute="leading" id="PFU-9j-TP7"/>
                                                     <constraint firstAttribute="trailing" secondItem="AvP-78-1WK" secondAttribute="trailing" constant="16" id="Tvh-CI-X2O"/>
                                                     <constraint firstItem="AvP-78-1WK" firstAttribute="top" secondItem="pbC-bi-ykF" secondAttribute="bottom" constant="16" id="W5X-Ap-Xgq"/>
+                                                    <constraint firstItem="oe1-0x-tnG" firstAttribute="leading" secondItem="fUb-KV-fYJ" secondAttribute="leading" constant="16" id="Yip-q1-7og"/>
+                                                    <constraint firstItem="oe1-0x-tnG" firstAttribute="top" secondItem="fUb-KV-fYJ" secondAttribute="top" constant="16" id="ZS4-v9-h1F"/>
                                                     <constraint firstAttribute="bottom" secondItem="0Qe-Sh-AcK" secondAttribute="bottom" id="pWq-ns-eIz"/>
                                                     <constraint firstAttribute="trailing" secondItem="0Qe-Sh-AcK" secondAttribute="trailing" id="y2S-Tu-D3L"/>
                                                     <constraint firstItem="0Qe-Sh-AcK" firstAttribute="top" secondItem="AvP-78-1WK" secondAttribute="bottom" constant="8" id="zsN-nJ-hb0"/>
