--- a/AHMH/View/Home/BookCollectionViewCell.xib
+++ b/AHMH/View/Home/BookCollectionViewCell.xib
@@ -25,6 +25,10 @@
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="FCL-Db-GHu">
                                         <rect key="frame" x="0.0" y="0.0" width="164" height="177"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="177" id="qnI-da-1AM"/>
+                                            <constraint firstAttribute="width" constant="164" id="rgT-mp-Usu"/>
+                                        </constraints>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bby-6q-sIz">
                                         <rect key="frame" x="0.0" y="185" width="164" height="20.5"/>
